[package]
name = "ghpulse"
version = "0.1.1"
edition = "2024"
description = "Your GitHub activity, visualized as generative SVG art"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
resvg = { version = "0.47.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ureq = { version = "3.3.0", features = ["json"] }

[features]
default = []
png = ["dep:resvg"]
